--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1>Test</h1>
+        <nav class="nav">
+            <div class="links">
+                <a class="active" href="index.html">Home</a>
+            </div>
+            <div class="links">
+                <a href="hobbies.html">Hobbies</a>
+            </div>
+            <div class="links">
+                <a href="skills.html">Skills</a>
+            </div>
+        </nav>
+        <div class="main">
+            Bonjour👋
+            <div class="main-content">
+                First, you think the worst is a broken heart<br/>
+                What's gonna kill you is the second part<br/>
+                And the third, is when your world splits down the middle<br/>
+                And fourth, you're gonna think that you've fixed yourself<br/>
+                Fifth, you see them out with someone else<br/>
+                And the sixth, is when you admit you may have fucked up a little
+            </div>
+        </div>
     </body>
 </html>
