--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,7 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="hobbyStyle.css" />
     </head>
     <body>
         <nav class="nav">
@@ -19,7 +20,20 @@
         <div class="main">
             None :(
             <div class="main-content">
+                <div>
+                    <div class="content-header">dreaming</div>
+                    <div class="content">
+                        hello
+                    </div>
+                </div>
+                reading<br/>
+                tribal art<br/>
+                cycling<br/>
+                sleeping<br/>
+                gaming<br/>
+                
             </div>
+            
         </div>
     </body>
 </html>
