--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <div class="main">
             Bonjour👋
             <div class="main-content">
-                First, you think the worst is a broken heart<br/>
-                What's gonna kill you is the second part<br/>
-                And the third, is when your world splits down the middle<br/>
-                And fourth, you're gonna think that you've fixed yourself<br/>
-                Fifth, you see them out with someone else<br/>
-                And the sixth, is when you admit you may have fucked up a little
+                <div class="line-right">First, you think the worst is a broken heart<br/></div>
+                <div class="line-left">What's gonna kill you is the second part<br/></div>
+                <div class="line-right">And the third, is when your world splits down the middle<br/></div>
+                <div class="line-left">And fourth, you're gonna think that you've fixed yourself<br/></div>
+                <div class="line-right">Fifth, you see them out with someone else<br/></div>
+                <div class="line-left">And the sixth, is when you admit you may have fucked up a little</div>
             </div>
         </div>
     </body>
