--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,7 @@
         <title></title>
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="hobbyStyle.css" />
+        <script src="hobbiesScript.js"></script>
     </head>
     <body>
         <nav class="nav">
@@ -20,20 +21,17 @@
         <div class="main">
             None :(
             <div class="main-content">
-                <div>
-                    <div class="content-header">dreaming</div>
-                    <div class="content">
-                        hello
-                    </div>
+                <div class="left">
+                    <div id="id1" class="content-header" onclick="rightContent('hey','id1')">dreaming</div>
+                    <div id="id2" class="content-header" onclick="rightContent('bro','id2')">reading</div>
+                    <div id="id3" class="content-header" onclick="rightContent('bro','id3')">tribal art</div>
+                    <div id="id4" class="content-header" onclick="rightContent('bro','id4')">cycling</div>
+                    <div id="id5" class="content-header" onclick="rightContent('bro','id5')">gaming</div>  
                 </div>
-                reading<br/>
-                tribal art<br/>
-                cycling<br/>
-                sleeping<br/>
-                gaming<br/>
-                
+                <div id="right-content" class="right right-animation">
+                    bruh
+                </div>
             </div>
-            
         </div>
     </body>
 </html>
