--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
         <title></title>
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="hobbyStyle.css" />
-        <script src="hobbiesScript.js"></script>
+        <script src="scripts.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
@@ -23,15 +23,15 @@
             List of hobbies
             <div class="main-content">
                 <div class="left">
-                    <div id="id1" class="content-header" onclick="rightContent('dream','id1')">dreaming</div>
-                    <div id="id2" class="content-header" onclick="rightContent('read','id2')">reading</div>
-                    <div id="id3" class="content-header" onclick="rightContent('I just like to draw','id3','birb.png')">tribal-art</div>
-                    <div id="id4" class="content-header" onclick="rightContent('tring tring 🛎️','id4','bike.png')">cycling</div>
-                    <div id="id5" class="content-header" onclick="rightContent('game','id5')">gaming</div>  
+                    <div id="id1" class="content-header" onclick="rightContent('dream','id1','',5)">dreaming</div>
+                    <div id="id2" class="content-header" onclick="rightContent('read','id2','',5)">reading</div>
+                    <div id="id3" class="content-header" onclick="rightContent('I just like to draw','id3','birb2.png',5)">tribal-art</div>
+                    <div id="id4" class="content-header" onclick="rightContent('tring tring 🛎️','id4','bike.png',5)">cycling</div>
+                    <div id="id5" class="content-header" onclick="rightContent('game','id5','',5)">gaming</div>  
                 </div>
                 <div id="right-content" class="right right-animation">
                     <div id="content-top" class="content-top"></div>
-                    <img id="content-img" class="image"/>
+                    <img id="content-img" class="image" src="img/white.png"/>
                     <div id="content-bottom" class="content-bottom"></div>
                 </div>
             </div>
