--- a/hobbies.html
+++ b/hobbies.html
@@ -13,10 +13,16 @@
                 <a href="index.html">Home</a>
             </div>
             <div class="links">
+                <a href="">About me</a>
+            </div>
+            <div class="links">
                 <a class="active" href="hobbies.html">Hobbies</a>
             </div>
             <div class="links">
                 <a href="skills.html">Skills</a>
+            </div>
+            <div class="links">
+                <a href="">Contact</a>
             </div>
         </nav>
         <div class="main">
