--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
                 <a class="active" href="index.html">Home</a>
             </div>
             <div class="links">
+                <a href="">About me</a>
+            </div>
+            <div class="links">
                 <a href="hobbies.html">Hobbies</a>
             </div>
             <div class="links">
                 <a href="skills.html">Skills</a>
+            </div>
+            <div class="links">
+                <a href="">Contact</a>
             </div>
         </nav>
         <div class="main">
