--- a/hobbies.html
+++ b/hobbies.html
@@ -37,7 +37,7 @@
                 </div>
                 <div id="right-content" class="right right-animation">
                     <div id="content-top" class="content-top"></div>
-                    <img id="content-img" class="image" src="img/white.png"/>
+                    <img id="content-img" class="image" src="img/Empty.png"/>
                     <div id="content-bottom" class="content-bottom"></div>
                 </div>
             </div>
