--- a/skills.html
+++ b/skills.html
@@ -13,20 +13,14 @@
                 <a href="index.html">Home</a>
             </div>
             <div class="links">
-                <a href="">About me</a>
-            </div>
-            <div class="links">
                 <a href="hobbies.html">Hobbies</a>
             </div>
             <div class="links">
                 <a class="active" href="skills.html">Skills</a>
             </div>
-            <div class="links">
-                <a href="">Contact</a>
-            </div>
         </nav>
         <div class="main">
-            <div class="main-contentbox">
+            <div class="main-contentbox left-animation">
                 <div class="main-header">education</div>
                 <div class="content">
                     <div class="item">
@@ -44,7 +38,7 @@
                 </div>
             </div>
 
-            <div class="main-contentbox">
+            <div class="main-contentbox right-animation">
                 <div class="main-header">experience</div>
                 <div class="content">
                     <div class="item">
@@ -95,7 +89,7 @@
             </div> -->
         </div>
         <div class="outside">
-            <div class="main-contentbox">
+            <div class="main-contentbox left-animation">
                 <div class="main-header">projects</div>
                 <div>
                     <div class="left">
