home and hobbies updated

--- a/hobbies.html
+++ b/hobbies.html
@@ -16,18 +16,21 @@
                 <a class="active" href="hobbies.html">Hobbies</a>
             </div>
             <div class="links">
-                <a href="skills.html">Skills</a>
+                <a href="skills.html">Work</a>
             </div>
         </nav>
         <div class="main">
-            List of hobbies
-            <div class="main-content">
+            <div class="right-animation">
+                List of hobbies
+            </div>
+            <div class="main-content left-animation">
                 <div class="left">
-                    <div id="id1" class="content-header" onclick="rightContent('dream','id1','',5)">dreaming</div>
-                    <div id="id2" class="content-header" onclick="rightContent('read','id2','',5)">reading</div>
-                    <div id="id3" class="content-header" onclick="rightContent('I just like to draw','id3','birb2.png',5)">tribal-art</div>
                     <div id="id4" class="content-header" onclick="rightContent('tring tring 🛎️','id4','bike.png',5)">cycling</div>
-                    <div id="id5" class="content-header" onclick="rightContent('game','id5','',5)">gaming</div>  
+                    <div id="id2" class="content-header" onclick="rightContent('you require 30 lvls','id2','enchanted.png',5)">reading</div>
+                    <div id="id5" class="content-header" onclick="rightContent('','id5','controller.png',5)">gaming</div>
+                    <div id="id3" class="content-header" onclick="rightContent('I just like to draw','id3','birb2.png',5)">tribal-art</div>
+                    <div id="id1" class="content-header" onclick="rightContent('','id1','Empty.png',5)">tech-enthusiast</div>
+
                 </div>
                 <div id="right-content" class="right right-animation">
                     <div id="content-top" class="content-top"></div>
@@ -37,4 +40,9 @@
             </div>
         </div>
     </body>
+    <!-- <footer>
+        <div class="ftext">
+            Bhavish Nadar
+        </div>
+    </footer> -->
 </html>
