--- a/skills.html
+++ b/skills.html
@@ -16,7 +16,7 @@
                 <a href="hobbies.html">Hobbies</a>
             </div>
             <div class="links">
-                <a class="active" href="skills.html">Skills</a>
+                <a class="active" href="skills.html">Work</a>
             </div>
         </nav>
         <div class="main">
@@ -111,4 +111,9 @@
             </div>
         </div>
     </body>
+    <footer>
+        <div class="ftext">
+            Bhavish Nadar
+        </div>
+    </footer>
 </html>
