--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <a href="hobbies.html">Hobbies</a>
             </div>
             <div class="links">
-                <a href="skills.html">Skills</a>
+                <a href="skills.html">Work</a>
             </div>
         </nav>
         <div class="main">
-            Bonjour👋
+            <!-- Bonjour👋
             <div class="main-content">
                 <div class="line-right">First, you think the worst is a broken heart<br/></div>
                 <div class="line-left">What's gonna kill you is the second part<br/></div>
@@ -26,7 +26,49 @@
                 <div class="line-left">And fourth, you're gonna think that you've fixed yourself<br/></div>
                 <div class="line-right">Fifth, you see them out with someone else<br/></div>
                 <div class="line-left">And the sixth, is when you admit you may have fucked up a little</div>
+            </div> -->
+            <div class="main-content">
+                <div class="left left-animation">
+                    <div>
+                        <img class="my-image" src="img/me2.jpg"/>
+                    </div>
+                </div>
+                <div class="right left-animation">
+                    <div class="main-header">
+                        about me
+                    </div>
+                    <div class="about">
+                        Bhavish Nadar here, I am a creator not always in an artistic sense but in a more boring techy way.
+                    </div>
+                    <div class="about">
+                        When I found that the whole world pretty much runs on binary numbers firing here and there it
+                        sparked my curiosity to dive deep into it.
+                    </div>
+                    <div class="about">
+                        And so here I am finding, learning and creating new boring stuff which people call programming.
+                    </div>
+                    <div class="about">
+                        Other that that, I like to draw, listen to mostly jazz and watch dumb aggressive cats.
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="sub-content">
+            <div class="right-animation">
+                Let's talk,
+            </div>
+            <div class="right-animation">
+                drop a line at 
+                <div class="email">
+                    bhaveshnadar@icloud.com
+                </div>
             </div>
         </div>
     </body>
+    <footer>
+        <div class="ftext">
+            Bhavish Nadar
+        </div>
+    </footer>
 </html>
