favi-icon and rearragened elements

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <link rel="stylesheet" href="style.css" />
+        <title>Bhavish Nadar</title>
+        <link rel="stylesheet" href="style.css" />        
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="favicon_io/site.webmanifest">
     </head>
     <body>
         <nav class="nav">
@@ -11,7 +16,7 @@
                 <a class="active" href="index.html">Home</a>
             </div>
             <div class="links">
-                <a href="hobbies.html">Hobbies</a>
+                <a href="hobbies.html">Interest</a>
             </div>
             <div class="links">
                 <a href="skills.html">Work</a>
@@ -30,13 +35,13 @@
             <div class="main-content">
                 <div class="left left-animation">
                     <div>
-                        <img class="my-image" src="img/me2.jpg"/>
+                        <img class="my-image" src="img/me3.jpg"/>
                     </div>
                 </div>
                 <div class="right left-animation">
-                    <div class="main-header">
+                    <!-- <div class="main-header">
                         about me
-                    </div>
+                    </div> -->
                     <div class="about">
                         Bhavish Nadar here, I am a creator not always in an artistic sense but in a more boring techy way.
                     </div>
