--- a/skills.html
+++ b/skills.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Bhavish Nadar</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="skillsStyle.css" />
         <script src="scripts.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="favicon_io/site.webmanifest">
     </head>
     <body>
         <nav class="nav">
@@ -13,7 +18,7 @@
                 <a href="index.html">Home</a>
             </div>
             <div class="links">
-                <a href="hobbies.html">Hobbies</a>
+                <a href="hobbies.html">Interest</a>
             </div>
             <div class="links">
                 <a class="active" href="skills.html">Work</a>
