Added proj and code

--- a/hobbies.html
+++ b/hobbies.html
@@ -30,11 +30,11 @@
             </div>
             <div class="main-content left-animation">
                 <div class="left">
-                    <div id="id4" class="content-header" onclick="rightContent('tring tring 🛎️','id4','bike.png',5)">cycling</div>
-                    <div id="id2" class="content-header" onclick="rightContent('you require 30 lvls','id2','enchanted.png',5)">reading</div>
-                    <div id="id5" class="content-header" onclick="rightContent('','id5','controller.png',5)">gaming</div>
-                    <div id="id3" class="content-header" onclick="rightContent('I just like to draw','id3','birb2.png',5)">tribal-art</div>
-                    <div id="id1" class="content-header" onclick="rightContent('','id1','Empty.png',5)">tech-enthusiast</div>
+                    <div id="id4" class="content-header" onclick="rightContent('tring tring 🛎️','id4','bike.png')">cycling</div>
+                    <div id="id2" class="content-header" onclick="rightContent('you require 30 lvls','id2','enchanted.png')">reading</div>
+                    <div id="id5" class="content-header" onclick="rightContent('','id5','controller.png')">gaming</div>
+                    <div id="id3" class="content-header" onclick="rightContent('I just like to draw','id3','birb2.png')">tribal-art</div>
+                    <div id="id1" class="content-header" onclick="rightContent('','id1','Empty.png')">tech-enthusiast</div>
 
                 </div>
                 <div id="right-content" class="right right-animation">
