--- a/skills.html
+++ b/skills.html
@@ -98,9 +98,9 @@
                 <div class="main-header">projects</div>
                 <div>
                     <div class="left">
-                        <div class="content-header" onclick="rightContent('A Web Crawler that analyses and stores webpages to calculate, optimize rank and priority of each page using page rank algorithm.','id1','spider.jpg',3)" id="id1">page rank spider crawler</div>
-                        <div class="content-header" onclick="rightContent('A real time prediction system using the MQ135 sensor to collect the AQI of the surrounding that to predict concentration of different pollutants like CO, SO2, PM 2.5 etc','id2','pm2.5.png',3)" id="id2">air quality prediction</div>
-                        <div class="content-header" onclick="rightContent('The model focus on high impact political events to fetch media regarding those specific events to form polarity of different ruling parties to predict the popularity opinion regarding them.','id3','bjpmap.png',3)" id="id3">social media sentiment analyser</div>
+                        <div class="content-header" onclick="projectContent('A Web Crawler that analyses and stores webpages to calculate, optimize rank and priority of each page using page rank algorithm.','id1','spider.png','spidercrawler.bhavishnadar.repl.co/','github.com/ProgramerB/pagerank2')" id="id1">page rank spider crawler</div>
+                        <div class="content-header" onclick="projectContent('A real time prediction system using the MQ135 sensor to collect the AQI of the surrounding that to predict concentration of different pollutants like CO, SO2, PM 2.5 etc','id2','pm2.5.png','','')" id="id2">air quality prediction</div>
+                        <div class="content-header" onclick="projectContent('The model focus on high impact political events to fetch media regarding those specific events to form polarity of different ruling parties to predict the popularity opinion regarding them.','id3','bjpmap.png','','')" id="id3">social media sentiment analyser</div>
                     </div>
                     <div id="right-content" class="right right-animation">
                         <div class="left">
@@ -110,7 +110,16 @@
                             <img id="content-img" class="image" src="img/Empty.png"/>
                         </div>
                 
-                        <div id="content-bottom" class="content-bottom"></div>
+                        <div id="content-bottom" class="content-bottom">
+                            <div class="left">
+                                <div class="left">
+                                    <a id='project' class="project-links" target="_blank" href=""></a>
+                                </div>
+                                <div class="right">
+                                    <a id='code' class="project-links" target="_blank" href=""></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
