--- a/skills.html
+++ b/skills.html
@@ -11,6 +11,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
         <link rel="manifest" href="favicon_io/site.webmanifest">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <nav class="nav">
@@ -128,6 +129,11 @@
     <footer>
         <div class="ftext">
             Bhavish Nadar
+        </div>
+        <div class="contact-nav">
+            <a class="contact-link" target="_blank" href="https://github.com/ProgramerB"><i class="fa fa-github"></i></a>
+            <a class="contact-link" target="_blank" href="https://www.linkedin.com/in/bhavish-nadar-096689207/"><i class="fa fa-linkedin"></i></a>
+            <a class="contact-link" target="_blank" href="https://twitter.com/BhavishNadar"><i class="fa fa-twitter"></i></a>
         </div>
     </footer>
 </html>
