--- a/skills.html
+++ b/skills.html
@@ -102,6 +102,8 @@
                         <div class="content-header" onclick="projectContent('A Web Crawler that analyses and stores webpages to calculate, optimize rank and priority of each page using page rank algorithm.','id1','spider.png','spidercrawler.bhavishnadar.repl.co/','github.com/ProgramerB/pagerank2')" id="id1">page rank spider crawler</div>
                         <div class="content-header" onclick="projectContent('A real time prediction system using the MQ135 sensor to collect the AQI of the surrounding that to predict concentration of different pollutants like CO, SO2, PM 2.5 etc','id2','mq135.png','AirQualityPrediction.bhavishnadar.repl.co','github.com/ProgramerB/AirQualityPrediction')" id="id2">air quality prediction</div>
                         <div class="content-header" onclick="projectContent('The model focus on high impact political events to fetch media regarding those specific events to form polarity of different ruling parties to predict the popularity opinion regarding them.','id3','bjp2.png','sentimentanalyser.bhavishnadar.repl.co/','github.com/ProgramerB/ElectionPrediction-')" id="id3">social media sentiment analyser</div>
+                        <div class="content-header" onclick="projectContent('Portfolio Links<br/><a class=project-links style=font-size:20px; href=https://divya-nadar.netlify.app/ target=_blank>Simply Image Focused</a> <br/><a class=project-links style=font-size:20px; href=https://mridul-nadar.netlify.app/ target=_blank>Accent Color Based</a>',
+                        'id4','Empty.png','','')" id="id4">simple portfolios</div>
                     </div>
                     <div id="right-content" class="right right-animation">
                         <div class="left">
