Added Resume PDF

--- a/skills.html
+++ b/skills.html
@@ -128,7 +128,14 @@
             </div>
         </div>
         <div class="main">
-
+            <div class="main-contentbox right-animation">
+                <div class="main-header">Resume</div>
+                <div class="content">
+                    <div class="item">
+                        <div class="header"><a href="Resume_Bhavish_Nadar.pdf" target="_blank">View Resume</a></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
     <footer>
