--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="right-animation">
                 drop a line at 
                 <div class="email">
-                    bhaveshnadar@icloud.com
+                    <a href="mailto:bhaveshnadar@icloud.com">bhaveshnadar@icloud.com</a> 
                 </div>
             </div>
         </div>
