changes in hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -32,10 +32,10 @@
             <div class="main-content left-animation">
                 <div class="left">
                     <div id="id4" class="content-header" onclick="rightContent('tring tring 🛎️','id4','bike.png')">cycling</div>
-                    <div id="id2" class="content-header" onclick="rightContent('you require 30 lvls','id2','enchanted.png')">reading</div>
-                    <div id="id5" class="content-header" onclick="rightContent('','id5','controller.png')">gaming</div>
+                    <div id="id2" class="content-header" onclick="rightContent('<span class=reading>\'\'Did you put your name into the Goblet of Fire, Harry?\'\' <br>  Dumbledore asked calmly.</span>','id2','calmly.jpg')">reading</div>
+                    <div id="id5" class="content-header" onclick="rightContent('you require 30 lvls<img src=img/lapis.png height=20px style=margin-left:10px; />','id5','enchanted.png')">gaming</div>
                     <div id="id3" class="content-header" onclick="rightContent('I just like to draw','id3','birb2.png')">tribal-art</div>
-                    <div id="id1" class="content-header" onclick="rightContent('','id1','Empty.png')">tech-enthusiast</div>
+                    <div id="id1" class="content-header" onclick="rightContent('','id1','printerfixmeme.jpg')">tech-enthusiast</div>
 
                 </div>
                 <div id="right-content" class="right right-animation" style="height: 600px;">
