added and refactored

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         And so here I am finding, learning and creating new boring stuff which people call programming.
                     </div>
                     <div class="about">
-                        Other that that, I like to draw, listen to mostly jazz and watch dumb aggressive cats.
+                        Other than that, I like to draw, listen to mostly jazz and watch dumb aggressive cats.
                     </div>
 
                 </div>
