updated linkedin link

--- a/skills.html
+++ b/skills.html
@@ -178,7 +178,7 @@
         </div>
         <div class="contact-nav">
             <a class="contact-link" target="_blank" href="https://github.com/ProgramerB"><i class="fa fa-github"></i></a>
-            <a class="contact-link" target="_blank" href="https://www.linkedin.com/in/bhavish-nadar-096689207/"><i class="fa fa-linkedin"></i></a>
+            <a class="contact-link" target="_blank" href="https://www.linkedin.com/in/nadarbhavish/"><i class="fa fa-linkedin"></i></a>
             <a class="contact-link" target="_blank" href="https://twitter.com/BhavishNadar"><i class="fa fa-twitter"></i></a>
         </div>
     </footer>
